Fixed margin on mobile gallery

--- a/public/assets/css/_less/modules/gallery.less
+++ b/public/assets/css/_less/modules/gallery.less
@@ -20,7 +20,7 @@
 	@media screen and (max-width: @mobile-bp-w) {
 		.gallery-item-container {
 			width: 49%;
-			margin: 0 1% 0 0;
+			margin: 0 1% 5px 0;
 		}
 	}
 }
